# impedances

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/impedances/: __init__.py  acoustical.py  base.py  electrical.py  impedances.py  mechanical.py  transducers.py
tests/: test_electrical.py
