[project]
name = "impedances"
version = "0.0.1"
requires-python = ">= 3.14"
dependencies = ["numpy >= 2.4.2"]
readme = "README.md"

[build-system]
requires = ["hatchling >= 1.28.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = ["ruff >= 0.0.47",
        "mypy >= 1.19.1",
        "pytest >= 9.0.2"]

[tool.ruff]
src = ["src"]

[tool.mypy]
files = ["src"]